styles.css
body {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap: 70px;
    min-height: 100vh;
    font-family: 'Roboto';
    margin: 0px;
}

img {
    width: 150px;
}

.small-img {
    width: 120px;
    height: 120px;
    border: 5px;
    border-style: solid;
    border-radius: 10px;
    border-color: #3882f6;
}

ul {
    list-style-type: none;
    display: flex;
    margin: 0px;
}

a {
    text-decoration: none;
    color: #e5e7eb;
    font-size: 18px
}

li {
    margin: 13px;
}

.title {
    padding: 10px;
    color: #f9faf8;
    font-weight: 900;
    font-size: 24px;
}

.header {
    display: flex;
    justify-content: space-between;
    padding: 0px 500px;
}

.hero {
    color: #f9faf8;
    font-size: 48px;
    font-weight: 1000;
    margin: 10px 0px;
}

.upper {
    display: flex;
    justify-content: space-between;
    padding: 100px 510px;
    color: #e5e7eb;
    font-size: 18px
}

.deserve {
    margin: 13px 0px;
}

.background-one {
    background-color: #1f2937;
}

.upper1 {
    max-width: 400px;
}

.middle {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.destinations {
    font-size: 34px;
    color: #1f2937;
    font-weight: 1000;
    margin: 50px;
}

.images {
    display: flex;
    gap: 35px;
    color: #0000008e;
}

.quote {
    display: flex;
    flex-direction: column;
    justify-content: center;
    background-color: #e5e7eb;
    padding: 0px 400px;
    height: 400px;
}

.sign {
    align-self: flex-end;
}

.down {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 50px 50px;
    border-radius: 8px;
}

button {
    background-color: #3882f6;
    color: #f9faf8;
    border-color: #1F2937;
    border-radius: 8px;
    height: 37px;
    width: 110px;
    font-weight: 700;
    font-size: 17px;
}

.button2 {
    border-color: #f9faf8;
}

.quote1 {
    font-size: 36px;
    color: #1f2937ab;
    font-weight: 300;
    font-style: italic;
}

.sign {
    font-size: 28px;
    font-weight: 1000;
}

.footer {
    background-color: #1F2937;
    color: #e5e7eb;
    display: flex;
    justify-content: center;
    padding: 50px;
}

.down {
    background-color: #3882f6;
    color: #e5e7eb;
    margin: 0px 500px;
}

